Design form add detail order

--- a/setting.ini
+++ b/setting.ini
@@ -1,7 +1,7 @@
 [setting]
 hostname=localhost
-dbname=backoffice
-user=root
-pass=
+dbname=dbposretail
+user=postgres
+pass=bismillah
 author=
 programer=
